force-app/main/default/objects/Savings_Product__c/Savings_Product__c.object-meta.xml
<CustomObject>
    <label>Savings Product</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Savings Products</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>