force-app/main/default/objects/Savings_Product__c/fields/Default_Interest_Rate__c.field-meta.xml
<CustomField>
    <fullName>Default_Interest_Rate__c</fullName>
    <label>Default Interest Rate</label>
    <precision>8</precision>
    <required>true</required>
    <scale>5</scale>
    <type>Percent</type>
</CustomField>