force-app/main/default/objects/Savings_Product__c/fields/Minimum_Interest_Rate__c.field-meta.xml
<CustomField>
    <fullName>Minimum_Interest_Rate__c</fullName>
    <label>Minimum Interest Rate</label>
    <precision>8</precision>
    <required>true</required>
    <scale>5</scale>
    <type>Percent</type>
</CustomField>