force-app/main/default/objects/Savings_Product__c/fields/Overdraft_limit__c.field-meta.xml
<CustomField>
    <fullName>Overdraft_limit__c</fullName>
    <label>Overdraft limit</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>