force-app/main/default/objects/Savings_Product__c/validationRules/age_limits.validationRule-meta.xml
<ValidationRule>
    <fullName>age_limits</fullName>
    <active>true</active>
    <errorConditionFormula>AND(!ISNULL( Maximum_Age__c), !ISNULL(  Minimum_Age__c ), Minimum_Age__c &gt; Maximum_Age__c)</errorConditionFormula>
    <errorMessage>Age limits are invalid</errorMessage>
</ValidationRule>