force-app/main/default/objects/Savings_Product__c/validationRules/age_limits_not_negative.validationRule-meta.xml
<ValidationRule>
    <fullName>age_limits_not_negative</fullName>
    <active>true</active>
    <errorConditionFormula>Maximum_Age__c&lt;0 ||  Minimum_Age__c&lt;0</errorConditionFormula>
    <errorMessage>Age should be greater than 0</errorMessage>
</ValidationRule>