force-app/main/default/objects/Savings_Product__c/validationRules/amount_must_be_positive.validationRule-meta.xml
<ValidationRule>
    <fullName>amount_must_be_positive</fullName>
    <active>true</active>
    <errorConditionFormula>Maximum_Amount__c &lt; 0 ||  Minimum_Amount__c &lt; 0</errorConditionFormula>
    <errorMessage>Amount must be greater than 0</errorMessage>
</ValidationRule>