force-app/main/default/objects/Savings_Product__c/validationRules/amount_range.validationRule-meta.xml
<ValidationRule>
    <fullName>amount_range</fullName>
    <active>true</active>
    <errorConditionFormula>Minimum_Amount__c &gt;  Maximum_Amount__c</errorConditionFormula>
    <errorDisplayField>Maximum_Amount__c</errorDisplayField>
    <errorMessage>Amount must be greater than Minimum Amount</errorMessage>
</ValidationRule>