force-app/main/default/objects/Savings_Product__c/validationRules/avoid_duplicate_name.validationRule-meta.xml
<ValidationRule>
    <fullName>avoid_duplicate_name</fullName>
    <active>true</active>
    <errorConditionFormula>Name = VLOOKUP(
 $ObjectType.Savings_Product__c.Fields.Name ,  
 $ObjectType.Savings_Product__c.Fields.Name ,  
 Name)</errorConditionFormula>
    <errorDisplayField>Name</errorDisplayField>
    <errorMessage>This name is already exist. Please enter a unique name</errorMessage>
</ValidationRule>