force-app/main/default/objects/Savings_Product__c/validationRules/interest_not_negative.validationRule-meta.xml
<ValidationRule>
    <fullName>interest_not_negative</fullName>
    <active>true</active>
    <errorConditionFormula>Default_Interest_Rate__c &lt; 0 ||  Maximum_Interest_Rate__c &lt; 0 ||  Minimum_Interest_Rate__c &lt; 0</errorConditionFormula>
    <errorMessage>Interest rate must be positive</errorMessage>
</ValidationRule>