force-app/main/default/objects/Savings_Product__c/validationRules/overdraft_limit_if_negative.validationRule-meta.xml
<ValidationRule>
    <fullName>overdraft_limit_if_negative</fullName>
    <active>true</active>
    <errorConditionFormula>Overdraft_limit__c&lt;0</errorConditionFormula>
    <errorDisplayField>Overdraft_limit__c</errorDisplayField>
    <errorMessage>Overdraft Limit should not be negative</errorMessage>
</ValidationRule>